nav section compete

--- a/index.html
+++ b/index.html
@@ -8,6 +8,31 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+    <!-- nav section start -->
+    <nav>
+        <header class="container">
+            <div class="logo">
+                <a href="#">
+                    <img src="assets/logo-navbar.png" alt="logo-navbar">
+                </a>
+            </div>
+            <div class="menu">
+                <ul>
+                    <li>
+                        <a href="#">Features</a>
+                    </li>
+                    <li>
+                        <a href="#">How It Works</a>
+                    </li>
+                    <li>
+                        <a href="#">Why It's Different</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="btn">Get Early Access</div>
+        </header>
+    </nav>
+    <!-- nav section end -->
+
 </body>
 </html>
