banner section add

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
 
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
     <!-- nav section start -->
     <nav>
@@ -34,5 +36,49 @@
     </nav>
     <!-- nav section end -->
 
+    <!-- banner section start -->
+    <section class="banner">
+        <div class="container">
+            <div class="banner-content">
+                <div class="first-content">
+                    <h2>
+                        <span>
+                            <img src="assets/Group 5.png" alt="Group">
+                        </span>
+                        <span>
+                            Early Access Now Open
+                        </span>
+
+                    </h2>
+                </div>
+                <h1>
+                    <span>Structured thinking,</span><br>not just note-taking.
+                </h1>
+                <p>
+                    A private space to store notes, links, and learning summaries — designed to <br>
+                    help you think clearly, connect ideas, and turn learning into long-term knowledge.
+                </p>
+                <div class="button-grup">
+                    <button class="btn">
+                        <span>Start Building Your Vault</span>
+                        <span>
+                            <img src="assets/ArrowRight.png" alt="ArrowRight">
+                        </span>
+                    </button>
+                </div>
+                <div class="button-grup">
+                    <button class="btn">
+                        <span>See How It Works</span>
+                        <span>
+                            <img src="assets/Play.png" alt="Play">
+                        </span>
+                    </button>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- banner section end -->
+
 </body>
+
 </html>
