notes section creat and banner section overley add and image src currection

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment-1</title>
 
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
@@ -15,7 +15,7 @@
         <header class="container">
             <div class="logo">
                 <a href="#">
-                    <img src="assets/logo-navbar.png" alt="logo-navbar">
+                    <img src="./assets/logo-navbar.png" alt="logo-navbar">
                 </a>
             </div>
             <div class="menu">
@@ -38,12 +38,13 @@
 
     <!-- banner section start -->
     <section class="banner">
+        <div class="overley"></div>
         <div class="container">
             <div class="banner-content">
                 <div class="first-content">
                     <h2>
                         <span>
-                            <img src="assets/Group 5.png" alt="Group">
+                            <img src="./assets/Group 5.png" alt="Group">
                         </span>
                         <span>
                             Early Access Now Open
@@ -62,7 +63,7 @@
                     <button class="btn">
                         <span>Start Building Your Vault</span>
                         <span>
-                            <img src="assets/ArrowRight.png" alt="ArrowRight">
+                            <img src="./assets/ArrowRight.png" alt="ArrowRight">
                         </span>
                     </button>
                 </div>
@@ -70,7 +71,7 @@
                     <button class="btn">
                         <span>See How It Works</span>
                         <span>
-                            <img src="assets/Play.png" alt="Play">
+                            <img src="./assets/Play.png" alt="Play">
                         </span>
                     </button>
                 </div>
@@ -78,6 +79,43 @@
         </div>
     </section>
     <!-- banner section end -->
+
+    <!-- notes section start -->
+    <section class="notes-area">
+        <div class="container">
+            <div class="section-heading">
+                <h2>
+                    Notes don't fail, Structure does.
+                </h2>
+                <p>
+                    You're not bad at learning. Your tools just weren't built for how knowledge actually works.
+                </p>
+            </div>
+            <div class="card-area">
+                <div class="card">
+                    <img class="icon" src="./assets/Vector.png" alt="Vector">
+                    <h3>Scattered notes</h3>
+                    <p>Your ideas live in 10 different apps, none of them connected.</p>
+                </div>
+                <div class="card">
+                    <img class="icon" src="./assets/Bookmarks.png" alt="Bookmarks">
+                    <h3>Bookmark overload</h3>
+                    <p>Hundreds of saved links you'll never revisit or remember.</p>
+                </div>
+                <div class="card">
+                    <img class="icon" src="./assets/Brain.png" alt="Brain">
+                    <h3>No idea connections</h3>
+                    <p>Insights stay isolated, never building into bigger understanding.</p>
+                </div>
+                <div class="card">
+                    <img class="icon" src="./assets/Info.png" alt="Info">
+                    <h3>Forgetting what you learned</h3>
+                    <p>Knowledge fades because there's no system to retain it.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- notes section end -->
 
 </body>
 
