brain, early and footer section areat and card css currection common css button-grup currection andcontainer section width currection

--- a/index.html
+++ b/index.html
@@ -117,6 +117,105 @@
     </section>
     <!-- notes section end -->
 
+    <!-- brain section start -->
+    <section class="brain-section">
+        <div class="container">
+            <div class="brain-img">
+                <img src="./assets/knowledge.png" alt="knowledge">
+            </div>
+            <div class="brain-content">
+                <h3>The Solution</h3>
+                <h2>Your second brain, structured by design.</h2>
+                <p>
+                    Personal Knowledge Vault isn't another note-taking app. z It's a thinking environment where every
+                    note, link, and summary becomes part of an interconnected web of understanding.
+                </p>
+                <ul>
+                    <li>
+                        <span><img src="./assets/CheckCircle.png" alt="CheckCircle"></span>
+                        <p>Capture ideas with structure built-in from day one</p>
+                    </li>
+                    <li>
+                        <span><img src="./assets/CheckCircle.png" alt="CheckCircle"></span>
+                        <p>Connect related concepts automatically as you write</p>
+                    </li>
+                    <li>
+                        <span><img src="./assets/CheckCircle.png" alt="CheckCircle"></span>
+                        <p>Build lasting knowledge through reflection prompts</p>
+                    </li>
+                    <li>
+                        <span><img src="./assets/CheckCircle.png" alt="CheckCircle"></span>
+                        <p>Find anything instantly with semantic search</p>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </section>
+    <!-- brain section end -->
+
+    <!-- early access section start -->
+    <section class="early-access">
+        <div class="container">
+            <div class="early-content">
+                <div class="section-heading">
+                    <h2>Ready to think more clearly?</h2>
+                    <p>
+                        Join thousands of learners who are building their personal knowledge vaults. <br>Start free, no
+                        credit card required.
+                    </p>
+                </div>
+                <div class="submit-srea">
+                    <div class="button-grup-1">
+                        <button class="btn">
+                            <span>See How It Works</span>
+                            <span>
+                                <img src="./assets/ArrowRight.png" alt="ArrowRight">
+                            </span>
+                        </button>
+                    </div>
+                    <p>Free during early access • No credit card needed</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- early access section end -->
+
+    <!-- footer access section start -->
+    <footer>
+        <div class="container">
+            <div class="footer-content">
+                <div class="footer-logo">
+                    <a href="#">
+                        <img src="./assets/logo-footer.png" alt="logo-footer">
+                    </a>
+                </div>
+                <div class="social">
+                    <h3>Social Links</h3>
+                    <ul>
+                        <li>
+                            <a href="#">
+                                <img src="./assets/twitter.png" alt="twitter">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <img src="./assets/linkdin.png" alt="linkdin">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <img src="./assets/facebook.png" alt="facebook">
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <hr>
+            <p class="copyright">© 2026 Personal Knowledge Vault. All rights reserved.</p>
+        </div>
+    </footer>
+    <!-- footer access section end -->
+
 </body>
 
 </html>
